# vanityssh-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: benchmark.sh  config.rs  error.rs  keygen.rs  lib.rs  main.rs  matcher.rs  thread_pool.rs  validation.rs
src/ssh/: mod.rs  private_key.rs  public_key.rs
tests/: cli_tests.rs  openssh_tests.rs  tests.rs  thread_pool_tests.rs
