[package]
name = "ed25519-vanity-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1.0.0"
rand = "0.7.0"
regex = "1.5.0"
hex = "0.4.0"
indicatif = "0.17.3"
chrono = "0.4.23"
thiserror = "1.0.37"
base64 = "0.21.0"
byteorder = "1.4.3"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"