[package]
name = "ed25519-vanity-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7.3"
regex = "1.8.1"
anyhow = "1.0.69"
thiserror = "1.0.39"
indicatif = "0.17.3"
chrono = "0.4.24"
base64 = "0.21.0"
# Add missing dependencies
byteorder = "1.4.3"
hex = "0.4.3"
# Multi-threading dependencies
num_cpus = "1.16.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.3"
tempfile = "3.6.0"