[package]
name = "vanityssh-rust"
version = "0.1.0"
edition = "2021"
description = "Generate SSH key pairs whose public keys match a user-specified regex pattern"
authors = ["kengggg"]
license = "MIT"
repository = "https://github.com/opemdream/vanityssh-rust"
keywords = ["ssh", "ed25519", "key-generation", "vanity", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
ed25519-dalek = "2.0.0"
rand = "0.7.3"
regex = "1.8.1"
anyhow = "1.0.69"
thiserror = "1.0.39"
indicatif = "0.17.3"
chrono = "0.4.24"
base64 = "0.21.0"
byteorder = "1.4.3"
hex = "0.4.3"
num_cpus = "1.16.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.3"
tempfile = "3.6.0"